--- a/Momo/src/main/webapp/WEB-INF/web.xml
+++ b/Momo/src/main/webapp/WEB-INF/web.xml
@@ -42,5 +42,8 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
+	
+	<session-config>
+	  <session-timeout>360</session-timeout>
+	</session-config>
 </web-app>
